# audio-recorder

./: .dockerignore  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  justfile  release-please-config.json  wrangler.jsonc
.github/workflows/: build-push-image.yml  helm-publish.yml  release-please-auto-merge.yml  rust.yml
assets/: justfile
helm/audio-recorder/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
helm/audio-recorder/templates/: _helpers.tpl  deployment.yaml  httproute.yaml  service.yaml  serviceaccount.yaml
r2/: .gitignore  justfile
src/: app.rs  lib.rs  main.rs  webworker.rs
src/components/: media_recorder.rs  mod.rs
src/whisper/: audio.rs  mod.rs  model.rs  util.rs
style/: main.css
tests/: basic_test.rs  model_test.rs
