[package]
name = "audio-recorder"
version = "0.1.0"
edition = "2024"
authors = ["David Pollack <david@da3.net>"]

[profile.release]
opt-level = "z"   # optimize for size in release builds
lto = true
strip = true
codegen-units = 1

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# non-cloudflare
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
], optional = true }
# cloudflare
worker = { version = "0.8", features = ["http", "axum", "d1"], optional = true }
# common
axum = { version = "0.8", default-features = false, optional = true }
getrandom = { version = "0.4", features = ["wasm_js"] }
leptos = { version = "0.8", features = ["cbor"] }
leptos_axum = { version = "0.8", default-features = false, optional = true }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
tower-service = "0.3"
wasm-bindgen = "0.2.118"
web-sys = { version = "0.3", features = [
  "MediaStream",
  "MediaDevices",
  "MediaRecorder",
  "MediaRecorderOptions",
  "MediaStreamConstraints",
  "Blob",
  "BlobEvent",
  "BlobPropertyBag",
  "Window",
  "Navigator",
  "console",
  "AudioContext",
  "AudioContextState",
  "AudioContextOptions",
  "AudioBuffer",
  "AudioBufferSourceNode",
  "FileReader",
  "Url",
  "BaseAudioContext",
  "Event",
  "Request",
  "RequestInit",
] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
leptos_workers = "0.3"
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
tokenizers = { version = "0.22", default-features = false, features = [
  "unstable_wasm",
] }
num-traits = "0.2.19"
safetensors = "0.7"
anyhow = "1.0"
rand = { version = "0.10", default-features = false, features = [
  "std",
  "thread_rng",
] }
reqwest = { version = "0.13" }
futures = "0.3.31"
send_wrapper = "0.6"
serde_cbor = "0.11.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
hydrate = ["leptos/hydrate"]
ssr = ["dep:axum", "dep:leptos_axum", "leptos/ssr", "leptos_router/ssr"]
cloudflare = ["dep:worker", "leptos_axum/wasm"]
nocloudflare = [
  "dep:tokio",
  "axum/macros",
  "axum/tokio",
  "axum/http2",
  "axum/default",
  "leptos_axum/default",
]

[package.metadata.leptos]
#wasm-validation = false
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "audio-recorder"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.css"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "assets"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "0.0.0.0:8787"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "cargo make test-ui"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr", "nocloudflare"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

wasm-opt-features = [
  "-Oz",
  "--enable-bulk-memory",
  "--enable-nontrapping-float-to-int",
  "--enable-simd",
]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['--enable-simd']

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['--enable-simd']

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['--enable-simd']
